--- a/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
+++ b/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
@@ -1,4 +1,11 @@
 # -*- mode: ruby -*-
+# Prerequisites for host operating system:
+# Ubuntu 14.04 LTS or newer
+# Virtualbox 4.3.28 or newer (with shared folder support)
+# vagrant 1.7.2 or newer
+# Shared folder to use in RStudio Server in guest operating system is /vagrant which is linked to host
+# operating system folder containing this Vagrantfile   file.
+
 # vi: set ft=ruby :
 
 # Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
