--- a/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
+++ b/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
@@ -1,10 +1,11 @@
 # -*- mode: ruby -*-
 # Prerequisites for host operating system:
 # Ubuntu 14.04 LTS or newer
-# Virtualbox 4.3.28 or newer (with shared folder support enabled)
+# git (https://git-scm.com/download/)
 # vagrant 1.7.2 or newer
+# Virtualbox 4.3.28 or newer (with shared folder support enabled)
 
-# Shared folder to use in RStudio Server in guest operating system is /vagrant which is linked to host
+# Shared directory to use in RStudio Server in guest operating system is /vagrant which is linked to host
 # operating system folder containing this Vagrantfile
 
 # following is based on http://nicercode.github.io/blog/2013-04-05-projects/
