--- a/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
+++ b/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
@@ -4,7 +4,7 @@
 # curl (http://www.confusedbycode.com/curl/)
 # git (https://git-scm.com/download/)
 # vagrant 1.7.2 or newer (https://www.vagrantup.com/downloads.html)
-# Virtualbox 4.3.28 or newer (with shared folder support enabled)
+# Virtualbox 4.3.28 or newer (with shared folder support enabled) (http://dlc-cdn.sun.com/virtualbox/4.3.28/index.html)
 
 # Shared directory to use in RStudio Server in guest operating system is /vagrant which is linked to host
 # operating system folder containing this Vagrantfile
