--- a/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
+++ b/rstudio-shiny-server-on-ubuntu-virtualbox/Vagrantfile
@@ -1,6 +1,7 @@
 # -*- mode: ruby -*-
 # Prerequisites for host operating system:
 # [Ubuntu 14.04 LTS 64-bit or newer] or [Windows 7 64-bit or newer]
+# Mac OS X might be supported as well, but not tested yet
 # curl (http://www.confusedbycode.com/curl/)
 # git (https://git-scm.com/download/)
 # vagrant 1.7.2 or newer (https://www.vagrantup.com/downloads.html)
